--- a/index.html
+++ b/index.html
@@ -4,9 +4,309 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Chef Site</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/sass/main.scss" />
   </head>
   <body>
+    <header class="primary-header | margin-block-start-24">
+      <img
+        class="logo | mx-auto"
+        src="assets/logo.svg"
+        alt="Chef John Wellington"
+      />
+      <nav class="primary-navigation | margin-block-start-24">
+        <ul class="flex-group mx-auto">
+          <li><a href="#about">About</a></li>
+          <li><a href="#meals">Meals</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section class="hero | bg-neutral-900 clr-neutral-100 text-center">
+        <div class="container">
+          <h1 class="fs-900 ff-accent margin-block-end-48">
+            Homecooked meals delivered straight to your door
+          </h1>
+          <div class="flex-group mx-auto">
+            <button class="button button--primary">Place order</button>
+            <a href="#" class="button button--outline">More Info</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="about">
+        <div class="container">
+          <div class="even-columns">
+            <div>
+              <picture>
+                <source srcset="assets/about.avif" type="image/avif" />
+                <source srcset="assets/about.webp" type="image/webp" />
+                <img
+                  class="shift-up box-shadow-1"
+                  src="assets/about.jpg"
+                  alt=""
+                />
+              </picture>
+            </div>
+            <div class="flow">
+              <header class="section-header | flow">
+                <h2 class="fs-800 ff-accent clr-primary-500">
+                  Amazing food without the hassle
+                </h2>
+                <p class="fs-600 uppercase">
+                  We do all the work, so all you have to do is sit back and
+                  enjoy
+                </p>
+              </header>
+              <p class="lead">It's ready to go</p>
+              <p>
+                Whether it's for a romantic evening with your significant other
+                or if you're hosting a large party and need food for a big
+                group, we're here to help!
+              </p>
+              <p>
+                We can cater to whatever your needs are, and ensure that our
+                delicious food is delivered at the perfect moment, fresh, hot,
+                and ready to eat exactly when you need it to be there.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section | bg-neutral-200 text-center">
+        <div class="container">
+          <header class="section-header | flow" data-decoration="true">
+            <h2 class="fs-800 ff-accent clr-primary-500">We make great food</h2>
+            <p class="fs-600 uppercase">
+              Cooking is our passion, with quality and freshness being of the
+              utmost importance
+            </p>
+          </header>
+
+          <div class="grid-auto-fit">
+            <div>
+              <h3 class="fs-500 fw-bold clr-neutral-900 uppercase">
+                Fresh Ingredients
+              </h3>
+              <p>
+                We take food seriously, and the first thing to making great food
+                is using fresh ingredients. If the ingredients don't meet our
+                standard, we don't use them.
+              </p>
+            </div>
+            <div>
+              <h3 class="fs-500 fw-bold clr-neutral-900 uppercase">
+                Professional chef
+              </h3>
+              <p>
+                Chef Wellington is a professionally trained chef who's worked in
+                top kitchens around the world.
+              </p>
+            </div>
+            <div>
+              <h3 class="fs-500 fw-bold clr-neutral-900 uppercase">
+                Ready for you
+              </h3>
+              <p>
+                Stop using services where you have to re-heat your food. We get
+                it to your door ready to eat, without sacrificing any quality at
+                all.
+              </p>
+            </div>
+            <div>
+              <h3 class="fs-500 fw-bold clr-neutral-900 uppercase">
+                Made with love
+              </h3>
+              <p>
+                Food is our passion, and we infuse that love and passion into
+                every single plate that we make and deliver straight to your
+                home.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="section | clr-neutral-100 bg-neutral-900 text-center"
+        id="meals"
+      >
+        <div class="container container--wide">
+          <header
+            class="section-header | flow | text-center"
+            data-decoration="true"
+          >
+            <h2 class="fs-800 ff-accent">Some of our meals</h2>
+            <p class="fs-600 uppercase">
+              Here are a few of our delicious, home-cooked meals that are sure
+              to please your taste buds.
+            </p>
+          </header>
+
+          <div class="even-columns">
+            <!-- column 1 -->
+            <figure class="interactive-figure">
+              <picture>
+                <source srcset="assets/meal-01.avif" type="image/avif" />
+                <source srcset="assets/meal-01.webp" type="image/webp" />
+                <img
+                  src="assets/meal-01.jpg"
+                  loading="lazy"
+                  alt="A nicely presented plate with a cooked peice of salmon on top of a bed of vegetables, with more vegetables on top of it"
+                />
+              </picture>
+              <figcaption class="padding-32">
+                <h3 class="fs-500 fw-bold uppercase">About this meal</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Aliquam egestas egestas dignissim.
+                </p>
+              </figcaption>
+            </figure>
+            <!-- column 2 -->
+            <figure class="interactive-figure">
+              <picture>
+                <source srcset="assets/meal-02.avif" type="image/avif" />
+                <source srcset="assets/meal-02.webp" type="image/webp" />
+                <img
+                  src="assets/meal-02.jpg"
+                  loading="lazy"
+                  alt="Several steak tacos on a table, along with several limes"
+                />
+              </picture>
+              <figcaption class="padding-32">
+                <h3 class="fs-500 fw-bold uppercase">About this meal</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Aliquam egestas egestas dignissim.
+                </p>
+              </figcaption>
+            </figure>
+            <!-- column 3 -->
+            <figure class="interactive-figure">
+              <picture>
+                <source srcset="assets/meal-03.avif" type="image/avif" />
+                <source srcset="assets/meal-03.webp" type="image/webp" />
+                <img
+                  src="assets/meal-03.jpg"
+                  loading="lazy"
+                  alt="Clams being tossed in a pan"
+                />
+              </picture>
+              <figcaption class="padding-32">
+                <h3 class="fs-500 fw-bold uppercase">About this meal</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Aliquam egestas egestas dignissim.
+                </p>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <section class="testimonials section | text-center" id="testimonials">
+        <div class="container container--wide">
+          <header class="section-header | flow">
+            <h2 class="clr-primary-500 ff-accent fs-800">
+              What our clients are saying about us
+            </h2>
+          </header>
+
+          <div class="even-columns">
+            <!-- card 1-->
+            <div class="card | box-shadow-1" data-type="testimonial">
+              <picture>
+                <source srcset="assets/testimonial-01.avif" type="image/avif" />
+                <source srcset="assets/testimonial-01.webp" type="image/webp" />
+                <img
+                  src="assets/testimonial-01.jpg"
+                  alt="A man standing outside, smiling"
+                />
+              </picture>
+              <div class="card__body">
+                <p>
+                  John Wellington and his team make the most amazing food. Every
+                  single time I've ordered, I've been blown-away by the quality.
+                  You can tell they only use fresh ingredients and put a lot of
+                  love into every single meal they make! You really can't ask
+                  for anything more, it's always fantastic.
+                </p>
+              </div>
+              <div class="padding-16 bg-neutral-200">
+                <p class="fs-500 clr-primary-500 fw-bold">John Deer</p>
+                <p>Lover of good food</p>
+              </div>
+            </div>
+            <!-- card 2-->
+            <div class="card | box-shadow-1" data-type="testimonial">
+              <picture>
+                <source srcset="assets/testimonial-02.avif" type="image/avif" />
+                <source srcset="assets/testimonial-02.webp" type="image/webp" />
+                <img
+                  src="assets/testimonial-02.jpg"
+                  alt="A woman holding a mobile, smiling"
+                />
+              </picture>
+              <div class="card__body">
+                <p>
+                  I'm so happy that I found John Wellington! The food is on par
+                  with some of the best restaurants I've ever eaten at, but from
+                  the comfort of my own home. Every single time I order, it's
+                  mouthwateringly delicious.
+                </p>
+              </div>
+              <div class="padding-16 bg-neutral-200">
+                <p class="fs-500 clr-primary-500 fw-bold">Marie Condo</p>
+                <p>Foodie</p>
+              </div>
+            </div>
+            <!-- card 3-->
+            <div class="card | box-shadow-1" data-type="testimonial">
+              <picture>
+                <source srcset="assets/testimonial-03.avif" type="image/avif" />
+                <source srcset="assets/testimonial-03.webp" type="image/webp" />
+                <img
+                  src="assets/testimonial-03.jpg"
+                  alt="A woman eating a sandwich"
+                />
+              </picture>
+              <div class="card__body">
+                <p>
+                  From simple meals to some of the most extravagant things I've
+                  ever eaten, John and his team always deliver. Every time I
+                  order something new, I just can't wait for it to be delivered
+                  and I know how mouth-wateringly declicious it's going to be.
+                  If you like good food, you have to give it a try!
+                </p>
+              </div>
+              <div class="padding-16 bg-neutral-200">
+                <p class="fs-500 clr-primary-500 fw-bold">Sam Reinhert</p>
+                <p>Good food enthusiast</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer
+      class="primary-footer section | bg-neutral-900 clr-neutral-100 text-center"
+    >
+      <div class="container | flow">
+        <p class="fw-bold">Homecooked meals delivered straight to your door</p>
+        <p>©2022 Persronal Chef Services</p>
+        <p>555 Boulevard Anywhere, Montreal, Quebec, J1S 1S9 | 123-555-1234</p>
+      </div>
+    </footer>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
